--- a/static/styles/recent_topics.scss
+++ b/static/styles/recent_topics.scss
@@ -234,6 +234,10 @@
             }
         }
 
+        .unread_topic {
+            background-color: hsl(0, 0%, 100%);
+        }
+
         .last_msg_time {
             float: left;
             margin-right: 5px;
